--- a/client/styles/sass/_variables.scss
+++ b/client/styles/sass/_variables.scss
@@ -2,7 +2,7 @@
 //-------------------------------------------------- */
 
 /* Primary */
-$red:								#cd040b;
+$red:								#04692E;
 // $red:								#28B463;
 $black:							#000000;
 $white:							#ffffff;
