--- a/client/styles/sass/_redirect.scss
+++ b/client/styles/sass/_redirect.scss
@@ -1,11 +1,24 @@
 .choice{
-background-color: #DCDCDC;
+background-color: #F1F1EF;
 
 }
 .choiceDiff{
 padding : 250px;
 border: 1px solid black;
 }
-.disp:hover{
-    font-size: 32px;
-}
+
+.disp {
+    font-size: 20px;
+    color: $black;
+
+    &:hover {
+      color: $red;
+      font-size: 32px;
+     
+    }
+    &:active {
+      color: $red;
+      font-size: 38px;
+    
+    }
+  }
