--- a/client/templates/loginHeader.html
+++ b/client/templates/loginHeader.html
@@ -7,7 +7,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" ><span>Medical Insights</span>
+            <a class="navbar-brand" href="/welcome"><span>Medical Insights</span>
             <img class="img-responsive" src="./assets/images/icon.jpg" alt="Brand Name" style="height:50px;">
             </a>
           </div>
