--- a/client/templates/discussion-form.html
+++ b/client/templates/discussion-form.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3>Create A New Account!</h3>
+    <h3>Start a Discussion!</h3>
 </div>
 <form name="form.userForm" ng-submit="submitForm(topic,discussion)" novalidate>
     <div class="modal-body">
