--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -11,6 +11,7 @@
 @import "sass/responsive";
 @import "sass/_redirect";
 @import "sass/_login";
+@import "sass/_doc";
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -40,5 +41,8 @@ body {
   max-width: 1690px;
 }
 .shift{
-  margin-top:30px;
+  margin-top:100px;
+}
+.shiftDown{
+  margin-top:200px;
 }
