--- a/client/styles/css/app.css
+++ b/client/styles/css/app.css
@@ -5892,6 +5892,12 @@ button.close {
     .color-container .color-swatch.brand-danger {
       background-color: #d9534f; }
 
+header {
+  position: relative; }
+
+#nav {
+  position: absolute; }
+
 .navbar.navbar-cd {
   margin-bottom: 0px;
   width: 100%;
@@ -6163,6 +6169,20 @@ button.close {
   float: right;
   margin-right: 200px; }
 
+.shift-left {
+  float: left;
+  width: 250px; }
+
+.shift-rightt {
+  float: right;
+  width: 80px; }
+
+.sizing {
+  height: 780px; }
+
+.down {
+  margin-top: 20px; }
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -6189,4 +6209,7 @@ body {
   max-width: 1690px; }
 
 .shift {
-  margin-top: 30px; }
+  margin-top: 100px; }
+
+.shiftDown {
+  margin-top: 200px; }
