--- a/client/styles/css/app.css
+++ b/client/styles/css/app.css
@@ -6183,6 +6183,9 @@ header {
 .down {
   margin-top: 20px; }
 
+.lapse {
+  width: 25%; }
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
