--- a/client/templates/finder.html
+++ b/client/templates/finder.html
@@ -1,16 +1,16 @@
 <header data-ng-include="'templates/header.html'" class="navbar-fixed-top"> </header>
- <div class="shift" >
+ <div class="main">
 
             <div class="sidenav shift" >
-              <a href="#cardio">Cardiology</a>
-              <a href="#general">General Medicine</a>
-              <a href="#neuro">Neurology</a>
-              <a href="#emer">Emergency</a>
+              <a href="#cardio" class="change">Cardiology</a>
+              <a href="#general" class="change"> General Medicine</a>
+              <a href="#neuro" class="change">Neurology</a>
+              <a href="#emer" class="change">Emergency</a>
             </div>
             
-            <div class="main">
            
-              <div id="cardio" class="shift">
+           
+              <div id="cardio" class=" sizing shiftDown ">
                 <div id="cardiology" class="jumbotron sizing shift" >
                   <p class="text-success">Cardiology</p>
                   <hr/>
@@ -50,26 +50,27 @@
                  
               </div>
               </div>
-              <div id="general" class="shift">
-                <div class="jumbotron sizing shiftDown">
+              <div id="general" >
+                <div class=" jumbotron sizing shift">
                   <p class="text-success">General Medicine</p>
                   <hr/>
               </div> 
               </div>
-              <div id="neuro" class="shift">
-                <div class="jumbotron sizing shiftDown">
+              <div id="neuro" >
+                <div class=" jumbotron sizing shift">
                   <p class="text-success">Neurology</p>
                   <hr/>
               </div> 
               </div>
-              <div id="emer" class="shift">
+              <div id="emer" >
                
-                  <div class="jumbotron sizing shiftDown">
+                  <div class="= jumbotron sizing shift">
                     <p class="text-success">Emergency</p>
                     <hr/>
                 </div> 
                
               </div>
             </div>
+            
                  
-          </div> 
+   
