Client side edit appointment is done

--- a/client/templates/finder.html
+++ b/client/templates/finder.html
@@ -1,7 +1,7 @@
 <header data-ng-include="'templates/header.html'" class="navbar-fixed-top"> </header>
  <div class="main">
 
-            <div class="sidenav shift" >
+            <div class="sidenav shift navbar" >
               <a href="#cardio" class="change">Cardiology</a>
               <a href="#general" class="change"> General Medicine</a>
               <a href="#neuro" class="change">Neurology</a>
