review fixed--> file upload to work with

--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -12,6 +12,9 @@
 @import "sass/_redirect";
 @import "sass/_login";
 @import "sass/_doc";
+@import "sass/_animate";
+@import "sass/_animateDiss";
+@import "sass/_animatePrev";
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
