--- a/client/styles/css/app.css
+++ b/client/styles/css/app.css
@@ -6224,6 +6224,94 @@ header {
   margin-left: 70px;
   /* Same as the width of the sidenav */ }
 
+.animate {
+  -webkit-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -moz-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -ms-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -o-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  position: relative; }
+
+.animate.ng-leave.ng-leave-active,
+.animate.ng-enter {
+  -webkit-transform: rotateX(90deg) rotateZ(90deg);
+  -moz-transform: rotateX(90deg) rotateZ(90deg);
+  -ms-transform: rotateX(90deg) rotateZ(90deg);
+  -o-transform: rotateX(90deg) rotateZ(90deg);
+  transform: rotateX(90deg) rotateZ(90deg);
+  opacity: 0;
+  height: 0px; }
+
+.animate.ng-enter.ng-enter-active,
+.animate.ng-leave {
+  -webkit-transform: rotateX(0deg) rotateZ(0deg);
+  -moz-transform: rotateX(0deg) rotateZ(0deg);
+  -ms-transform: rotateX(0deg) rotateZ(0deg);
+  -o-transform: rotateX(0deg) rotateZ(0deg);
+  transform: rotateX(0deg) rotateZ(0deg);
+  opacity: 1;
+  height: 30px; }
+
+.yo.ng-enter {
+  -webkit-animation: enter 600ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  animation: enter 600ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  display: block;
+  position: relative; }
+
+@-webkit-keyframes enter {
+  from {
+    opacity: 0;
+    height: 0px;
+    left: -70px; }
+  75% {
+    left: 15px; }
+  to {
+    opacity: 1;
+    height: 30px;
+    left: 0px; } }
+
+@keyframes enter {
+  from {
+    opacity: 0;
+    height: 0px;
+    left: -70px; }
+  75% {
+    left: 15px; }
+  to {
+    opacity: 1;
+    height: 30px;
+    left: 0px; } }
+
+.pull.ng-enter,
+.pull.ng-leave {
+  -webkit-transition: 725ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -moz-transition: 725ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -ms-transition: 725ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -o-transition: 725ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  transition: 725ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  position: relative;
+  display: block; }
+
+.pull.ng-leave.pull.ng-leave-active,
+.pull.ng-enter {
+  -webkit-transform: scaleY(0);
+  -moz-transform: scaleY(0);
+  -ms-transform: scaleY(0);
+  -o-transform: scaleY(0);
+  transform: scaleY(0);
+  height: 0px;
+  opacity: 0; }
+
+.pull.ng-enter.pull.ng-enter-active,
+.pull.ng-leave {
+  -webkit-transform: scaleY(1);
+  -moz-transform: scaleY(1);
+  -ms-transform: scaleY(1);
+  -o-transform: scaleY(1);
+  transform: scaleY(1);
+  height: 30px;
+  opacity: 1; }
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
