--- a/client/styles/sass/_responsive.scss
+++ b/client/styles/sass/_responsive.scss
@@ -98,7 +98,7 @@
           }
         }
         .header-text-right {
-          display: inline-block;
+          display: block;
           width: 17%;
         }
         .nav-main {
