--- a/client/styles/css/app.css
+++ b/client/styles/css/app.css
@@ -6056,7 +6056,7 @@ header {
         margin-top: 28px;
         width: 139px; }
     .navbar.navbar-cd .header-text-right {
-      display: inline-block;
+      display: block;
       width: 17%; }
     .navbar.navbar-cd .nav-main {
       margin-top: 40px;
@@ -6223,6 +6223,43 @@ header {
 .main {
   margin-left: 70px;
   /* Same as the width of the sidenav */ }
+
+.listDown {
+  border: 1px solid #333333;
+  padding: 20px;
+  text-align: center;
+  background-color: #F6F6F6;
+  margin: 10px;
+  display: inline-block; }
+
+.prevHead {
+  background-color: #959595;
+  border: 1px solid #333333;
+  padding: 10px; }
+
+.prevData {
+  text-align: center; }
+
+.prevData:hover {
+  background-color: #E9F8E9; }
+
+.msgs {
+  border: 1px solid green;
+  padding: 50px;
+  margin: 10px; }
+
+.msgHead {
+  padding: 10px;
+  margin: -10px; }
+
+.msgFirstHead {
+  padding: 2px; }
+
+.msgCenter {
+  text-align: center; }
+
+.msgButtons {
+  float: right; }
 
 .animate {
   -webkit-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
