--- a/client/templates/review-form.html
+++ b/client/templates/review-form.html
@@ -4,7 +4,7 @@
 <div uib-alert class="alert alert-danger" close="close()" ng-if="disp">
    Please select a PDF file for upload
 </div><br/>
-<form name="form.reviewForm" ng-submit="submitForm(data)" ng-init="getData()" enctype="multipart/form-data" novalidate>
+<form name="form.reviewForm" ng-submit="" ng-init="getData()" enctype="multipart/form-data" novalidate>
 
    <div>
        <p><strong>Patient Name: </strong>{{userName}}</p>
@@ -20,7 +20,7 @@
 
     </div>
     <div class="modal-footer">
-        <button type="submit" class="btn btn-success" ng-disabled="form.reviewForm.$invalid">Save</button>
+        <button type="submit" class="btn btn-success" ng-disabled="form.reviewForm.$invalid" ng-click="submitForm(data)">Save</button>
         <button class="btn btn-danger" ng-click="cancel()">Cancel</button>
     </div>
 </form>
