appointment for one hr

--- a/client/templates/loginHeader.html
+++ b/client/templates/loginHeader.html
@@ -20,7 +20,7 @@
             <li ng-class="vm.getClass('/appointment')"><a href="/appointment">Make Appointment</a></li>
             <li ng-class="vm.getClass('/previous')"><a href="/previous">Appointments</a></li>
            
-            <li ng-class="vm.getClass('/update')"><a href="/update">Settings</a></li>
+            <li ng-class="vm.getClass('/update')"><a href="/update">Update Information</a></li>
             
             <li ng-controller="getLogin as vm" ng-class="vm.getClass('/')"><a ng-click="vm.logout()"><img class="logout" src="./assets/images/logout.jpg"/></a></li>
           </ul>
