--- a/client/templates/review.html
+++ b/client/templates/review.html
@@ -1,7 +1,8 @@
 <div class="modal-header" ng-init="getReview()">
     <legend><h2>Review of the Appointment</h2></legend>
 
-<div>{{review}}</div>
+<h3>{{review}}</h3>
+
     
 </div> 
         <button class="btn btn-danger" ng-click="cancel()">Cancel</button>
