--- a/client/templates/review-form.html
+++ b/client/templates/review-form.html
@@ -1,10 +1,8 @@
-<div class="modal-header">
+<div class="modal-header" ng-init="getData()">
     <legend><h2>Review</h2></legend>
 </div>
-<div uib-alert class="alert alert-danger" close="close()" ng-if="disp">
-   Please select a PDF file for upload
-</div><br/>
-<form name="form.reviewForm" ng-submit="" ng-init="getData()" enctype="multipart/form-data" novalidate>
+
+<form name="form.reviewForm"  enctype="multipart/form-data" novalidate>
 
    <div>
        <p><strong>Patient Name: </strong>{{userName}}</p>
