--- a/client/templates/appoint.html
+++ b/client/templates/appoint.html
@@ -50,10 +50,11 @@
         </div>
         <p>Contact :
             <input type="text" placeholder="999#######" name="contact" minlength="10" maxlength="10" ng-model="appoint.contact" ng-blur="appoint.checkContact()"
-                required onkeyup="this.value=this.value.replace(/[^\d]/,'')" />
+                required onkeyup="this.value=this.value.replace(/[^\d]/,'')" pattern="^[1-9][0-9]*$" />
         </p>
         <div ng-messages="appointment.contact.$error">
             <p class="warn" ng-message="required">Please enter your Contact information</p>
+            <p class="warn" ng-message="pattern">Please enter another contact number</p>
 
 
         </div>
