--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -15,8 +15,8 @@
     <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
       <div class="nav-main-wrapper">
         <ul class="nav navbar-nav nav-main ">
-        
-          <li ng-class="vm.getClass('/login')"><a href="/login">Login/Sign Up</a></li>
+
+          <li ng-class="vm.getClass('/getLogin')"><a href="/getLogin">Login/Sign Up</a></li>
           <li ng-class="vm.getClass('/about')"><a href="/about">About</a></li>
         </ul>
       </div>
