--- a/client/templates/appoint.html
+++ b/client/templates/appoint.html
@@ -29,7 +29,7 @@
             <br/>
         </p>
         <div ng-messages="appointment.sex.$error">
-            <p class="warn" ng-message="required">Please select your Sex.</p>
+            <p class="warn" ng-message="required">Please select your Gender.</p>
         </div>
         <div>Department:
             <select required ng-model="appoint.selectDept" name="dept" ng-change="appoint.changeDoc(appoint.selectDept)" ng-options="dept as dept for dept in appoint.dept"></select>
@@ -48,21 +48,43 @@
         </div>
         <p>Date of appointment:
 
-            <input type="datetime-local" name="date" class="form-control" ng-model="appoint.date" id="datepicker" ng-blur="appoint.verifyDate()"
+            <input type="date" name="date" class="form-control" ng-model="appoint.date" id="datepicker" ng-change="appoint.verifyDate()"
                 ng-change="appoint.clearDate()" required/> <span class="warn">{{appoint.dateCheck}}</span>
         </p>
         
         <div ng-messages="appointment.date.$error">
-            <p class="warn" ng-message="required">Please a date as Date "mm/dd/yyyy : HH:MM AM/PM".</p>
+            <p class="warn" ng-message="required">Please a date as Date "mm/dd/yyyy ".</p>
         </div>
         <div ng-show="appoint.selectedDet">
             <p>Availability of Doctor <b>{{appoint.selectDoc}}</b></p>
             <table border="1px">
                 <tr>
-                    <th>For the Date : <b>{{appoint.date | date : "MMMM/dd/yyyy :  hh:mm:ss"}}</b></th>
+                    <th>For the Date : <b>{{appoint.date | date : "MMMM/dd/yyyy"}}</b></th>
               <td><button class="btn btn-success" ng-click="appoint.checkAvailability(appoint.selectDoc,appoint.date, appoint.selectDept)">Check Availability</button></td></tr>
             </table>
         </div>
+        <div>
+            <button ng-click="appoint.getDet()" class="btn btn-warning" ng-hide="appoint.dispTime">Get More Details</button>
+            <div uib-alert class="alert alert-danger"  close="appoint.fillDispClose()" ng-if="appoint.fillDisp" >
+                    Please fill in all the details
+              </div>
+        </div>
+        <div ng-show="appoint.dispTime">
+           <div>
+               <h3>The chosen time is {{appoint.checkTime}}</h3>
+            <button class="btn btn-danger" ng-click="appoint.checkAvailability(appoint.selectDoc,appoint.date, appoint.selectDept)" ng-disabled="appoint.view">Choose another Time</button>
+            <button class="btn btn-success" ng-click="appoint.checkChosenTime()">Confirm Time</button>
+        </div>
+        <div ng-show="appoint.timeShow">
+            
+           <table ng-hide="view">
+               <tr ng-model="appoint.time" name="time"  ng-repeat=" times in appoint.timings">
+                   <td>{{times}}</td><td><button class="btn btn-primary" ng-click="appoint.choose(times)">Take Slot</button></td>
+                   
+               </tr>
+           </table>
+        </div>
+     
         <p>Enter the symptoms of the problem:
             <br/>
             <textarea id="problem" rows="5" cols="50" name="symptoms" minlength="5" ng-model="appoint.symptoms" required></textarea>
@@ -89,5 +111,10 @@
 
 
         </p>
+        <div uib-alert class="alert alert-warning"  close="appoint.closeTime()" ng-if="appoint.timeDisp" >
+           Please confirm a time
+       </div>
+    
+    </div>
     </form>
 </div>
