--- a/client/templates/appoint.html
+++ b/client/templates/appoint.html
@@ -1,5 +1,5 @@
 <div>
-    <form name="appointment" ng-submit- "" novalidate >
+    <form name="appointment" ng-submit- "" >
         <p> Name :
 
 
