--- a/client/templates/resultReview.html
+++ b/client/templates/resultReview.html
@@ -8,9 +8,10 @@
       <th>Age</th>
       <th>Sex</th>
       <th>Date of Appointment</th>
+      <th>Docotor Incharge</th>
       <th>Symptoms</th>
       <th>Review</th>
-      <th>Drugs</th>
+
     </thead>
     <tbody>
 
@@ -20,12 +21,10 @@
                     <td>{{value.age}}</td>
                     <td>{{value.sext}}</td>
                     <td>{{value.date | date : "MMMM/dd/yyyy : hh:mm:ss"}}</td>
+                    <td>{{value.doc}}</td>
                     <td>{{value.symptoms}}</td>
                     <td>{{value.review}}</td>
-                    <td >
-                      <div ng-repeat="d in value.drugs"> <span>{{d}}</span><br/></div>
-                     
-                    </td>
+
                 </tr>
 
     </tbody>
