--- a/client/templates/register.html
+++ b/client/templates/register.html
@@ -10,16 +10,16 @@
             <p class="warn" ng-message="required">Your name is required.</p>
         </div>
         <p>Registration Number :
-            <input type="text" class="form-control" name="reg" ng-model="vm.regNum" required   minlength="7" maxlength="7" onkeyup="this.value=this.value.replace(/[^\d]/,'')"
+            <input type="text" class="form-control" name="reg" ng-model="vm.regNum" required   minlength="7" maxlength="7" ng-keyup="vm.checkRegister()" onkeyup="this.value=this.value.replace(/[^\d]/,'')"
           />
             <br/> </p>
         <div ng-messages="register.reg.$error">
             <p class="warn" ng-message="minlength">Please enter a 7 digit Registration Number</p>
             <p class="warn" ng-message="required">Your Registration Number is required.</p>
-       
+
         </div>
         <p>Email:
-            <input type="email" class="form-control" name="email" ng-model="vm.mail" required pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+            <input type="email" class="form-control" name="email" ng-model="vm.mail" required pattern="^[a-z0-9._%+-]+@[a-z0-9.-]{3,}\.[a-z]{2,}$"
             />
             <br/></p>
         <div ng-messages="register.email.$error">
