primary working structure of doc review

--- a/client/templates/review-form.html
+++ b/client/templates/review-form.html
@@ -15,6 +15,7 @@
     <strong> <p>Doctor Incharge : {{doc}}</p> <span>&nbsp; &nbsp;</span> Date : {{date| date : "MMMM/dd/yyyy : hh:mm:ss"}} </p></strong>
    </div>
    </div>
+   <div></div>
         <div class="form-group">
           <div> <label>Review</label><br/>
             <textarea rows="5" cols="50" ng-model="data" ng-minlength="2" ng-maxlength="500" required></textarea>
