--- a/client/templates/edit-form.html
+++ b/client/templates/edit-form.html
@@ -81,7 +81,7 @@
           </div>
 
        <p>
-           <button class="btn btn-success"  type="submit" ng-click="makeAppointment()" ng-disabled="disp">Change Appointment!</button> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+           <button class="btn btn-success"  type="submit" ng-click="makeAppointment()">Change Appointment!</button> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
            <button class="btn btn-danger" ng-click="cancel()">Cancel</button>
            <br/>
 
